--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MisLugares">
-        <activity android:name=".modelo.VistaLugares"></activity>
+        <activity android:name=".presentacion.VistaLugarActivity"></activity>
+        <activity android:name=".presentacion.EdicionLugarActivity" />
+        <activity android:name=".modelo.VistaLugares" />
         <activity
             android:name=".presentacion.AcercaDe"
             android:theme="@style/Theme.AppCompat.Light.Dialog" />
